# bitboost

./: .gitignore  .travis.yml  COPYRIGHT  Cargo.toml  LICENSE  README.md  env.sh  rustc.sh
benches/: bitset.rs  bitslice.rs  bitvec.rs  util.rs
examples/: boost.rs  classification.py  gen_lowcard_nom_dataset.py  lowcard_nom.rs  raw_bitboost.py  regression.py  test.rs
experiments/: experiment_runner.py  gbdt_model.py  params.py  util.py
experiments/allstate/: convert-allstate.ipynb  run-allstate.ipynb
experiments/bin-mist/: run-bin-mnist.ipynb
experiments/covtype/: convert-covtype.ipynb  run-covtype.ipynb
experiments/youtube/: convert-youtube.ipynb  run-youtube.ipynb
python/: COPYRIGHT  README.md  bitboost_config.gen.csv  requirements.txt  setup.py
python/bitboost/: __init__.py  bitboost.py  sklearn.py
src/: binner.rs  bitblock.rs  bitset.rs  bitslice.rs  boost.rs  booster.rs  c_api.rs  config.rs  count_and_sum.rs  data.rs  dataset.rs  harley_seal.rs  hist.rs  lib.rs  metric.rs  new_binner.rs  numfeat_mask_store.rs  objective.rs  old_binner.rs  quantile.rs  quantile_new.rs  simd.rs  slice_store.rs  splitter.rs  tree.rs  tree_learner.rs
src/any/: mod.rs
src/bits/: bitblock.rs  bitset.rs  bitslice.rs  bitslice_old.rs  bitvec.rs  full_bitset.rs  mod.rs  scaled_bitslice.rs  simd.rs  sum_simd.rs  util.rs
src/conf/: mod.rs
src/dataset/: mod.rs
src/objective/: loss.rs  mod.rs
src/old/bits/: bitset.rs  bitslice.rs  bitvec.rs  mod.rs
src/old/tree/: eval.rs  loss.rs  tree_learner.rs
src/tree/: baseline_tree_learner.rs  bit_tree_learner.rs  eval.rs  learner.rs  loss.rs  mod.rs  target_values.rs  tree.rs  tree_builder.rs  tree_learner.rs
src/tree/baseline/: hist_store.rs  mod.rs  tree_learner.rs
src/tree/learn/: histogram.rs  mod.rs  node_to_split.rs  split_candidate.rs  tree_learner.rs  tree_learner_context.rs
src/tree_old/: baseline_tree_learner.rs  bit_tree_learner.rs  eval.rs  mod.rs
