[package]
name = "spdyboost"
version = "0.1.0"
authors = ["Laurens Devos <laurens.devos@outlook.com>"]
autobenches = false
edition = "2018"

[dependencies]
num = "0.2"
rand = "0.6.1"
fnv = "1.0.6"
#rayon = "1.0.3"

log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

#flate2 = "1.0.6"

[dev-dependencies]
#criterion = "0.2"
pretty_env_logger = "0.3.0" # examples

[profile.release]
opt-level = 3
#lto = false
debug = true

#[[bench]]
#name = "bitvec"
#harness = false

#[[bench]]
#name = "bitslice"
#harness = false
