[package]
name = "spdyboost"
version = "0.1.0"
authors = ["Laurens Devos <laurens.devos@outlook.com>"]
autobenches = false
edition = "2018"

[dependencies]
num = "0.2"
rand = "0.6.1"
fnv = "1.0.6"
csv = "1.0.5"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
pretty_env_logger = "0.3.0"

[dev-dependencies]
#criterion = "0.2"

[profile.release]
opt-level = 3
#lto = false
debug = true

[[bin]]
name = "spdyboost-run"
path = "src/bin/run.rs"

#[[bench]]
#name = "bitvec"
#harness = false

#[[bench]]
#name = "bitslice"
#harness = false
