[package]
name = "bitboost"
version = "0.1.0"
authors = ["Laurens Devos <laurens.devos@outlook.com>"]
autobenches = false
edition = "2018"

[dependencies]
libc = "0.2.51"
num = "0.2"
rand = "0.6.1"
fnv = "1.0.6"
csv = "1.0.5"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
pretty_env_logger = "0.3.0"
cpu-time = "0.1.0"
rayon = "1.0.3"

[lib]
name = "bitboost"
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
#criterion = "0.2"

[profile.release]
opt-level = 3
#lto = false
debug = true

[[bin]]
name = "run_bitboost"
path = "src/bin/run.rs"

[[bin]]
name = "bitboost_gen_config_csv"
path = "src/bin/bitboost_gen_config_csv.rs"

#[[bench]]
#name = "bitvec"
#harness = false

#[[bench]]
#name = "bitslice"
#harness = false
